# Claude-Harness

./: .gitignore  .mcp.json  .mcp.json.example  CHANGELOG.md  CLAUDE.md  CLAUDE_INTEGRATION_GUIDE.md  HARNESS_COMMANDS_REFERENCE.md  HARNESS_USAGE_GUIDE.md  README.md  base_code_plan.md
.claude/: settings.json
.claude/agents/: README.md  accessibility-auditor.md  api-spec-generator.md  api-tester.md  auth-route-debugger.md  auth-route-tester.md  auto-error-resolver.md  code-architecture-reviewer.md  code-refactor-master.md  data-analyst.md  data-pipeline-architect.md  db-migration-agent.md  devops-automator.md  documentation-architect.md  evidence-collector.md  frontend-error-fixer.md  ml-engineer.md  ml-evaluator.md  performance-auditor.md  performance-benchmarker.md  pipeline-orchestrator.md  plan-reviewer.md  planner.md  product-manager.md  rapid-prototyper.md  reality-checker.md  refactor-planner.md  security-auditor.md  security-engineer.md  technical-writer.md  test-coverage-agent.md  ui-designer.md  ux-researcher.md  web-research-specialist.md
.claude/commands/: dev-qa-loop.md  harness-apply.md  harness-backport.md  harness-changelog.md  harness-docs-update.md  harness-init.md  harness-plan-sync.md  quality-gate.md
.claude/hooks/: CONFIG.md  README.md  docs-update-reminder.sh  docs-update-reminder.ts  error-handling-reminder.sh  error-handling-reminder.ts  package-lock.json  package.json  pnpm-lock.yaml  post-tool-use-tracker.mjs  post-tool-use-tracker.sh  pr-review-trigger.sh  pr-review-trigger.ts  session-start-docs-loader.sh  session-start-docs-loader.ts  skill-activation-prompt.mjs  skill-activation-prompt.sh  skill-activation-prompt.ts  trigger-build-resolver.mjs  trigger-build-resolver.sh  tsc-check.mjs  tsc-check.sh  tsconfig.json
.claude/skills/: README.md  skill-rules.json
.claude/skills/aws-guidelines/: QUALITY_NOTES.md  SKILL.md
.claude/skills/brand-guidelines/: QUALITY_NOTES.md  SKILL.md
.claude/skills/data-analysis-guidelines/: SKILL.md
.claude/skills/data-pipeline-guidelines/: SKILL.md
.claude/skills/database-guidelines/: QUALITY_NOTES.md  SKILL.md
.claude/skills/django-backend-guidelines/: QUALITY_NOTES.md  SKILL.md
.claude/skills/docker-guidelines/: QUALITY_NOTES.md  SKILL.md
.claude/skills/docx/: QUALITY_NOTES.md  SKILL.md
.claude/skills/embedded-c-guidelines/: SKILL.md
.claude/skills/embedded-cpp-guidelines/: QUALITY_NOTES.md  SKILL.md
.claude/skills/error-tracking/: QUALITY_NOTES.md  SKILL.md
.claude/skills/express-backend-guidelines/: SKILL.md
.claude/skills/fastapi-backend-guidelines/: QUALITY_NOTES.md  SKILL.md
.claude/skills/frontend-design/: QUALITY_NOTES.md  SKILL.md
.claude/skills/git-workflow-guidelines/: SKILL.md
.claude/skills/jira-workflow-guidelines/: SKILL.md
.claude/skills/mermaid/: QUALITY_NOTES.md  SKILL.md
.claude/skills/ml-evaluation-guidelines/: SKILL.md
.claude/skills/ml-training-guidelines/: SKILL.md
.claude/skills/pdf/: SKILL.md  (+1 more)
.github/workflows/: pr-code-review.yaml
base/c-embedded/: CMakeLists.txt  Makefile  README.md
base/c-embedded/docs/: checklist.md  history.md  plan.md  task.md
base/c-embedded/include/: app_config.h
base/c-embedded/src/: main.c
base/c-embedded/src/drivers/mock/: gpio_mock.c  gpio_mock.h  uart_mock.c  uart_mock.h
base/c-embedded/src/drivers/stm32/: gpio_stm32.c  gpio_stm32.h  uart_stm32.c  uart_stm32.h
base/c-embedded/src/hal/: hal_gpio.c  hal_gpio.h  hal_timer.c  hal_timer.h  hal_types.h  hal_uart.c  hal_uart.h
base/c-embedded/src/tasks/: freertos_types.h  task_led.c  task_led.h  task_uart_monitor.c  task_uart_monitor.h
base/c-embedded/src/utils/: logger.c  logger.h  ring_buffer.c  ring_buffer.h
base/c-embedded/tests/: CMakeLists.txt  run_tests.c  test_hal_gpio.c  test_ring_buffer.c
base/c-embedded/tests/unity/: unity.c  unity.h  unity_internals.h
base/cpp-embedded/: CMakeLists.txt  README.md
base/cpp-embedded/docs/: checklist.md  history.md  plan.md  task.md
base/cpp-embedded/drivers/include/: Console.hpp  Led.hpp
base/cpp-embedded/drivers/src/: Console.cpp  Led.cpp
base/cpp-embedded/examples/blinky/: CMakeLists.txt  main.cpp
base/cpp-embedded/include/hal/: IGpio.hpp  II2c.hpp  ISpi.hpp  IUart.hpp
base/cpp-embedded/mock/: MockGpio.hpp  MockUart.hpp
base/cpp-embedded/platform/stm32/: Gpio.cpp  Gpio.hpp  Uart.cpp  Uart.hpp
base/cpp-embedded/tests/: CMakeLists.txt  test_gpio.cpp  test_led_driver.cpp  test_uart.cpp
base/django/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  manage.py  pytest.ini  requirements-dev.txt  requirements.txt
base/express/: .env.example  Dockerfile  README.md  docker-compose.yaml  package.json
base/fastapi/: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
base/fastapi/backend/: main.py
base/fastapi/backend/api/v1/routers/: auth.py  user.py
base/fastapi/backend/core/: config.py
base/fastapi/backend/db/: orm.py
base/fastapi/backend/domain/shared/: base_repository.py
base/fastapi/backend/domain/user/: auth_service.py  enums.py  model.py  repository.py  service.py
base/fastapi/backend/dtos/: auth.py  user.py
base/fastapi/backend/error/: __init__.py
base/fastapi/backend/middleware/: error_handler.py
base/fastapi/backend/utils/: logger.py  password.py  s3.py
base/fastapi/docs/: checklist.md  history.md  plan.md  task.md
base/fastapi/tests/: test_auth.py
base/nestjs/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  package.json
base/nextjs/: .env.example  README.md  next.config.ts  package.json
base/react-native/: .env.example  README.md  app.json  package.json
base/spring-boot/: .env.example  Dockerfile  README.md  build.gradle.kts  docker-compose.yaml  gradlew  settings.gradle.kts
docs/: AI-IDE-SKILLS-SETUP-GUIDE.md  checklist.md  history.md  phase-14-diagnosis.md  plan.md  skill-modification-proposals.md  skill-quality-audit-report.md  task.md
frontend/: package.json  pnpm-lock.yaml
frontend/src/: middleware.ts
frontend/tests/: global-setup.ts  global-teardown.ts
scripts/: harness-init.sh
(+182 files in other folders)
